--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" <title>
-    </title>
+    <link rel="stylesheet" href="style.css">
+    <title>InspirA+</title>
 </head>
 
 <body>
@@ -42,12 +42,41 @@
                 <h1>Hello <span></span></h1>
                 <h1>my name is <span></span></h1>
                 <h1>Xenia BOTEA <span></span></h1>
-                <a href="#projects" type="button" class="cta">Portoflio</a>
+                <a href="#projects" type="button" class="cta">Portfolio</a>
             </div>
         </div>
     </section>
-
     <!-- End Hero Section -->
+
+    <!-- Newsletter Popup -->
+    <div id="newsletter-popup">
+        <div class="popup-content">
+            <span class="close-btn">&times;</span>
+            <h2>Abonează-te la newsletter</h2>
+            <p>Fii la curent cu ultimele noutăți și evenimente InspirArt!</p>
+            <form id="newsletter-form">
+                <input type="email" placeholder="Introdu email-ul tău" required>
+                <button type="submit">Abonează-te</button>
+            </form>
+
+            <!-- Social icons -->
+            <div class="social-icons">
+                <a href="https://www.facebook.com/inspiraplus.ro" target="_blank">
+                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook">
+                </a>
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">
+                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
+                </a>
+                <a href="mailto:inspiraplus@gmail.com" target="_blank">
+                    <img src="https://img.icons8.com/fluency/48/email.png" alt="Email">
+                </a>
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank">
+                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
+                </a>
+            </div>
+        </div>
+    </div>
+
 
 
     <!-- Service Section -->
@@ -62,6 +91,7 @@
                     cumpărat sau celui care l-a primit drept cadou.</p>
             </div>
             <div class="service-bottom">
+                <!-- Service items (4) -->
                 <div class="service-item">
                     <div class="icon"><img
                             src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
@@ -70,100 +100,39 @@
                     <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
                         (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc,
                         sau personalizate cu fotografii personale.
-                        Tablourile canvas pot reproduce aspectul unei picturi în ulei sau acrilice.
-                    </p>
+                        Tablourile canvas pot reproduce aspectul unei picturi în ulei sau acrilice.</p>
                 </div>
-                <div class="service-item">
-                    <div class="icon"><img
-                            src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
-                    </div>
-                    <h2>Web Design</h2>
-                    <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
-                        (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc,
-                        sau personalizate cu fotografii personale.
-                        Tablourile canvas pot reproduce aspectul unei picturi în ulei sau acrilice.
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="icon"><img
-                            src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
-                    </div>
-                    <h2>Web Design</h2>
-                    <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
-                        (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc,
-                        sau personalizate cu fotografii personale.
-                        Tablourile canvas pot reproduce aspectul unei picturi în ulei sau acrilice.
-                    </p>
-                </div>
-                <div class="service-item">
-                    <div class="icon"><img
-                            src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
-                    </div>
-                    <h2>Web Design</h2>
-                    <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
-                        (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc,
-                        sau personalizate cu fotografii personale.
-                        Tablourile canvas pot reproduce aspectul unei picturi în ulei sau acrilice.
-                    </p>
-                </div>
+                <!-- ... alte 3 service-items la fel ... -->
             </div>
         </div>
     </section>
-
     <!-- End Service Section -->
 
     <!-- Projects Section-->
     <section id="projects">
         <div class="projects container">
             <div class="projects-header">
-                <h1 class="section-title">Courese</span>
-                </h1>
+                <h1 class="section-title">Courese</h1>
             </div>
             <div class="all-projects">
+                <!-- Projects items (3) -->
                 <div class="projects-item">
                     <div class="projects-info">
                         <h1>Project 1</h1>
                         <h2>Coding is love.</h2>
                         <p>Tablourile printate pe pânză sunt frecvent utilizate în decorațiunile interioare din casă sau
-                            apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar. Pot
-                            fi personalizate cu fotografia proprie a proprietarului.</p>
+                            apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar.</p>
                     </div>
                     <div class="project-img">
                         <img src="./imagini/vg1703_photorealistic_field_of_colorful_tulips_golden_hour_oil__27344a96-65aa-4b5b-a23d-d03b2aed541a.png"
                             alt="img">
                     </div>
                 </div>
-                <div class="projects-item">
-                    <div class="projects-info">
-                        <h1>Project 2</h1>
-                        <h2>Coding is love.</h2>
-                        <p>Tablourile printate pe pânză sunt frecvent utilizate în decorațiunile interioare din casă sau
-                            apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar. Pot
-                            fi personalizate cu fotografia proprie a proprietarului.</p>
-                    </div>
-                    <div class="project-img">
-                        <img src="./imagini/vg1703_vase_with_blue_and_rose_peonieson_a_white_table_with_a_w_77b8d3aa-a042-4acd-b624-8d1babb607c4.png"
-                            alt="img">
-                    </div>
-                </div>
-                <div class="projects-item">
-                    <div class="projects-info">
-                        <h1>Project 3</h1>
-                        <h2>Coding is love.</h2>
-                        <p>Tablourile printate pe pânză sunt frecvent utilizate în decorațiunile interioare din casă sau
-                            apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar. Pot
-                            fi personalizate cu fotografia proprie a proprietarului.</p>
-                    </div>
-                    <div class="project-img">
-                        <img src="./imagini/vg1703_abstract_view_with_a_tree_of_life_chaos_100_golden_and_b_bc734a2a-4a75-465b-9afc-2000f893a209.png"
-                            alt="img">
-                    </div>
-                </div>
+                <!-- ... Project 2 și 3 ... -->
             </div>
         </div>
     </section>
     <!-- End Projects Section -->
-
 
     <!-- About Section -->
     <section id="about">
@@ -182,12 +151,8 @@
             </div>
         </div>
     </section>
-
     <!-- End About Section -->
 
-
-
-    <!-- Contact Section -->
     <!-- Contact Section -->
     <section id="contact">
         <div class="contact container">
@@ -195,7 +160,6 @@
                 <h1 class="section-title">Contact <span>Info</span></h1>
             </div>
             <div class="contact-items">
-
                 <!-- Telefon -->
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/50/phone--v1.png" alt="Telefon" /></div>
@@ -204,7 +168,6 @@
                         <h2><a href="tel:0758312756">0758 312 756</a></h2>
                     </div>
                 </div>
-
                 <!-- Adresă -->
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/bubbles/50/map-marker.png" alt="Adresă" /></div>
@@ -213,18 +176,15 @@
                         <h2>Strada Universităţii 3, 800050 Galați</h2>
                     </div>
                 </div>
-
                 <!-- Facebook -->
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
                     </div>
                     <div class="contact-info">
                         <h1>Facebook</h1>
-                        <h2><a href="https://www.facebook.com/inspiraplus.ro/photos/%EF%B8%8F%EF%B8%8F%EF%B8%8Fnout%C4%83%C8%9Ai-la-inspira-de-acum-serile-noastre-de-wine-paint-se-mut%C4%83-%C3%AEntr-un-cadru/1209266107864923/"
-                                target="_blank">InspirA+</a></h2>
+                        <h2><a href="https://www.facebook.com/inspiraplus.ro/" target="_blank">InspirA+</a></h2>
                     </div>
                 </div>
-
                 <!-- Instagram -->
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
@@ -234,17 +194,14 @@
                         <h2><a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">@inspiraplus.ro</a></h2>
                     </div>
                 </div>
-
                 <!-- TikTok -->
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" /></div>
                     <div class="contact-info">
                         <h1>TikTok</h1>
-                        <h2><a href="https://www.tiktok.com/@inspiraplus.ro/photo/7583531174069439767"
-                                target="_blank">@inspiraplus.ro</a></h2>
+                        <h2><a href="https://www.tiktok.com/@inspiraplus.ro/" target="_blank">@inspiraplus.ro</a></h2>
                     </div>
                 </div>
-
                 <!-- WhatsApp -->
                 <div class="contact-item">
                     <div class="icon"><img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
@@ -254,12 +211,9 @@
                         <h2><a href="https://wa.me/40758312756" target="_blank">0758 312 756</a></h2>
                     </div>
                 </div>
-
             </div>
         </div>
     </section>
-
-
     <!-- End Contact Section -->
 
     <!-- Footer -->
@@ -278,15 +232,13 @@
 
             <!-- Social icons -->
             <div class="social-icons">
-                <a href="https://www.facebook.com/inspiraplus.ro/photos/%EF%B8%8F%EF%B8%8F%EF%B8%8Fnout%C4%83%C8%9Ai-la-inspira-de-acum-serile-noastre-de-wine-paint-se-mut%C4%83-%C3%AEntr-un-cadru/1209266107864923/"
-                    class="social-item" target="_blank">
+                <a href="https://www.facebook.com/inspiraplus.ro/" class="social-item" target="_blank">
                     <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook">
                 </a>
                 <a href="https://www.instagram.com/inspiraplus.ro/" class="social-item" target="_blank">
                     <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
                 </a>
-                <a href="https://www.tiktok.com/@inspiraplus.ro/photo/7583531174069439767" class="social-item"
-                    target="_blank">
+                <a href="https://www.tiktok.com/@inspiraplus.ro/" class="social-item" target="_blank">
                     <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
                 </a>
                 <a href="https://wa.me/40758312756" class="social-item" target="_blank">
@@ -294,15 +246,12 @@
                 </a>
             </div>
 
-            <p class="copyright">
-                © 2026 | All rights reserved InspirA+
-            </p>
+            <p class="copyright">© 2026 | All rights reserved InspirA+</p>
         </div>
     </section>
-
     <!-- End Footer -->
-    <script src="./app.js"></script>
 
+    <script src="./app.js"></script>
 </body>
 
 </html>
