--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>InspirA+</title>
+    <link rel="icon" type="image/png" href="imagini/cropped-fav.png">
 </head>
 
 <body>
@@ -15,9 +16,12 @@
             <div class="nav-bar">
                 <div class="brand">
                     <a href="#hero">
-                        <h1><span>InspirA+</span></h1>
+                        <img src="imagini/logo.svg" alt="InspirArt Logo" class="logo">
                     </a>
                 </div>
+
+
+
                 <div class="nav-list">
                     <div class="hamburger">
                         <div class="bar"></div>
@@ -39,8 +43,8 @@
     <section id="hero">
         <div class="hero container">
             <div>
-                <h1>Hello <span></span></h1>
-                <h1>my name is <span></span></h1>
+                <h1>An artistic <span></span></h1>
+                <h1>project by<span></span></h1>
                 <h1>Xenia BOTEA <span></span></h1>
                 <a href="#projects" type="button" class="cta">Portfolio</a>
             </div>
@@ -52,11 +56,11 @@
     <div id="newsletter-popup">
         <div class="popup-content">
             <span class="close-btn">&times;</span>
-            <h2>Abonează-te la newsletter</h2>
-            <p>Fii la curent cu ultimele noutăți și evenimente InspirArt!</p>
+            <h2>Subscribe to the newsletter</h2>
+            <p>Stay up to date with the latest news and events from InspirArt!</p>
             <form id="newsletter-form">
-                <input type="email" placeholder="Introdu email-ul tău" required>
-                <button type="submit">Abonează-te</button>
+                <input type="email" placeholder="Enter your email address" required>
+                <button type="submit">Subscribe</button>
             </form>
 
             <!-- Social icons -->
@@ -84,26 +88,28 @@
         <div class="services container">
             <div class="service-top">
                 <h1 class="section-title">Cole<span>c</span>tion</h1>
-                <p>Pânza imprimată cu imaginea dorită este tăiată la dimensiune, apoi se întinde cu fermitate pe șasiul
-                    de lemn și capsată pe partea din spate. Cadrele sunt de obicei construite din lemn de brad masiv
-                    pentru o rezistență sporită. Astfel se
-                    obține un tablou personalizat de calitate, care va rămâne mult timp în proprietatea celui care l-a
-                    cumpărat sau celui care l-a primit drept cadou.</p>
+                <p class="highlight-text">Hello! Welcome to my world!</p>
+                <p>I’m <strong>Xenia Botea</strong>, a visual artist. Here you will find my original artworks and art
+                    prints. I hope you enjoy your time here, and thank you for your interest in my work.</p>
+                <p class="social-prompt">If you’d like to get in touch, feel free to send me a message on
+                    <span>WhatsApp </span> or follow me on social media.
+                </p>
             </div>
-            <div class="service-bottom">
-                <!-- Service items (4) -->
-                <div class="service-item">
-                    <div class="icon"><img
-                            src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
-                    </div>
-                    <h2>Web Design</h2>
-                    <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
-                        (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc,
-                        sau personalizate cu fotografii personale.
-                        Tablourile canvas pot reproduce aspectul unei picturi în ulei sau acrilice.</p>
+        </div>
+        <div class="service-bottom">
+            <!-- Service items (4) -->
+            <div class="service-item">
+                <div class="icon"><img
+                        src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
                 </div>
-                <!-- ... alte 3 service-items la fel ... -->
+                <h2>Web Design</h2>
+                <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
+                    (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc, sau
+                    personalizate cu fotografii personale. Tablourile
+                    canvas pot reproduce aspectul unei picturi în ulei sau acrilice.</p>
             </div>
+            <!-- ... alte 3 service-items la fel ... -->
+        </div>
         </div>
     </section>
     <!-- End Service Section -->
@@ -173,7 +179,10 @@
                     <div class="icon"><img src="https://img.icons8.com/bubbles/50/map-marker.png" alt="Adresă" /></div>
                     <div class="contact-info">
                         <h1>Adresă</h1>
-                        <h2>Strada Universităţii 3, 800050 Galați</h2>
+                        <h2><a href="https://www.google.com/maps/search/?api=1&query=Strada+Universităţii+3,+Galați,+Romania"
+                                target="_blank">
+                                Strada Universităţii 3, 800050 Galați
+                            </a></h2>
                     </div>
                 </div>
                 <!-- Facebook -->
@@ -221,15 +230,9 @@
         <div class="footer container">
             <div class="brand">
                 <h1><span>X</span>enia <span>B</span>otea</h1>
-                <h2>Your Complete Solution</h2>
             </div>
 
             <!-- Contact -->
-            <div class="contact">
-                <p>Adresă: Strada Universităţii 3, 800050 Galați</p>
-                <p>Telefon: <a href="tel:0758312756">0758 312 756</a></p>
-            </div>
-
             <!-- Social icons -->
             <div class="social-icons">
                 <a href="https://www.facebook.com/inspiraplus.ro/" class="social-item" target="_blank">
@@ -244,14 +247,47 @@
                 <a href="https://wa.me/40758312756" class="social-item" target="_blank">
                     <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
                 </a>
-            </div>
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati"
+                    class="social-item" target="_blank">
+                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps">
+                </a>
 
+
+            </div>
             <p class="copyright">© 2026 | All rights reserved InspirA+</p>
+            <div style="text-align: center; margin-top: 15px;">
+                <a href="termeni.html"
+                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Terms
+                    & Conditions</a>
+                <span style="color: #444;">|</span>
+                <a href="privacy.html"
+                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Privacy
+                    Policy</a>
+            </div>
         </div>
     </section>
     <!-- End Footer -->
+    <script>
+        // Blochează click dreapta pe imagini
+        document.addEventListener('contextmenu', function (e) {
+            if (e.target.tagName === 'IMG') {
+                e.preventDefault();
+            }
+        }, false);
 
+        // Blochează drag and drop (să nu poată trage imaginea pe desktop)
+        document.addEventListener('dragstart', function (e) {
+            if (e.target.tagName === 'IMG') {
+                e.preventDefault();
+            }
+        }, false);
+    </script>
     <script src="./app.js"></script>
+    <!-- Buton WhatsApp fix dreapta jos -->
+    <a href="https://wa.me/40758312756" target="_blank" class="whatsapp-float">
+        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+    </a>
+
 </body>
 
 </html>
