--- a/index.html
+++ b/index.html
@@ -71,9 +71,10 @@
                 <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">
                     <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
                 </a>
-                <a href="mailto:inspiraplus@gmail.com" target="_blank">
+                <a href="mailto:Contact@inspiraplus.ro" target="_blank">
                     <img src="https://img.icons8.com/fluency/48/email.png" alt="Email">
                 </a>
+
                 <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank">
                     <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
                 </a>
