--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
-                        <li><a href="#hero" data-after="Home">About me</a></li>
-                        <li><a href="#services" data-after="Services">Colection</a></li>
-                        <li><a href="#projects" data-after="Projects">Courses</a></li>
-                        <li><a href="#about" data-after="About">Workshops</a></li>
-                        <li><a href="#contact" data-after="Contact">Contact</a></li>
+                        <li><a href="about.html" target="_blank">About me</a></li>
+                        <li><a href="collection.html" target="_blank">Colection</a></li>
+                        <li><a href="courses.html" target="_blank">Courses</a></li>
+                        <li><a href="workshops.html" target="_blank">Workshops</a></li>
+                        <li><a href="contact.html" target="_blank">Contact</a></li>
+                        </a>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -39,19 +41,55 @@
     </section>
     <!-- End Header -->
 
-    <!-- Hero Section -->
     <section id="hero">
         <div class="hero container">
-            <div>
-                <h1>An artistic <span></span></h1>
-                <h1>project by<span></span></h1>
-                <h1>Xenia BOTEA <span></span></h1>
-                <a href="#projects" type="button" class="cta">Portfolio</a>
+            <div class="hero-inner fade-scroll">
+                <h1>WELCOME TO<span></span></h1>
+                <h1>MY ARTISTIC<span></span></h1>
+                <h1 class="hero-name">Xenia BOTEA<span></span></h1>
+
+                <!-- Linie ondulată -->
+                <div class="wave-line"></div>
+
+                <!-- Text jos -->
+                <div class="hero-about">
+                    <div class="hero-col">
+                        <p>
+                            I'm Xenia, a full-time artist living and working in Romania. Art has been part of my life
+                            for as long as I can remember. I have always painted, drawn, and created.
+                        </p>
+
+                        <p>
+                            At the age of 12, I made a promise to myself: to become an artist. This dream has been a
+                            constant and guiding force in my life.
+                        </p>
+
+                        <p>
+                            I work in series, using mixed media on various surfaces, and I enjoy experimenting. Art, the
+                            natural world, and human psychology remain my greatest passions.
+                        </p>
+                    </div>
+
+                    <div class="hero-col">
+                        <p>
+                            For over 20 years I have had the privilege of combining them in what I call "the best job in
+                            the world."
+                        </p>
+
+                        <p>
+                            My passion for art and for people drives me to organize workshops and creative sessions for
+                            all ages: wine & paint sessions for adults, art activities in schools, and workshops for
+                            children and parents.
+                        </p>
+
+                        <p class="hero-sign">
+                            Warmly,<br>Xenia
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
-    <!-- End Hero Section -->
-
     <!-- Newsletter Popup -->
     <div id="newsletter-popup">
         <div class="popup-content">
@@ -81,150 +119,6 @@
             </div>
         </div>
     </div>
-
-
-
-    <!-- Service Section -->
-    <section id="services">
-        <div class="services container">
-            <div class="service-top">
-                <h1 class="section-title">Cole<span>c</span>tion</h1>
-                <p class="highlight-text">Hello! Welcome to my world!</p>
-                <p>I’m <strong>Xenia Botea</strong>, a visual artist. Here you will find my original artworks and art
-                    prints. I hope you enjoy your time here, and thank you for your interest in my work.</p>
-                <p class="social-prompt">If you’d like to get in touch, feel free to send me a message on
-                    <span>WhatsApp </span> or follow me on social media.
-                </p>
-            </div>
-        </div>
-        <div class="service-bottom">
-            <!-- Service items (4) -->
-            <div class="service-item">
-                <div class="icon"><img
-                        src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
-                </div>
-                <h2>Web Design</h2>
-                <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
-                    (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc, sau
-                    personalizate cu fotografii personale. Tablourile
-                    canvas pot reproduce aspectul unei picturi în ulei sau acrilice.</p>
-            </div>
-            <!-- ... alte 3 service-items la fel ... -->
-        </div>
-        </div>
-    </section>
-    <!-- End Service Section -->
-
-    <!-- Projects Section-->
-    <section id="projects">
-        <div class="projects container">
-            <div class="projects-header">
-                <h1 class="section-title">Courese</h1>
-            </div>
-            <div class="all-projects">
-                <!-- Projects items (3) -->
-                <div class="projects-item">
-                    <div class="projects-info">
-                        <h1>Project 1</h1>
-                        <h2>Coding is love.</h2>
-                        <p>Tablourile printate pe pânză sunt frecvent utilizate în decorațiunile interioare din casă sau
-                            apartament, cu modele alese de designeri de interior profesioniști, sau de proprietar.</p>
-                    </div>
-                    <div class="project-img">
-                        <img src="./imagini/vg1703_photorealistic_field_of_colorful_tulips_golden_hour_oil__27344a96-65aa-4b5b-a23d-d03b2aed541a.png"
-                            alt="img">
-                    </div>
-                </div>
-                <!-- ... Project 2 și 3 ... -->
-            </div>
-        </div>
-    </section>
-    <!-- End Projects Section -->
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="about container">
-            <div class="col-left">
-                <div class="about-img">
-                    <img src="./imagini/Dreamy_Cloud.jpg" alt="img">
-                </div>
-            </div>
-            <div class="col-right">
-                <h1 class="section-title">Work <span>Shops</span></h1>
-                <h2>Front End Developer</h2>
-                <p>Tabloul canvas este un print pe panza, care nu trebuie confundata cu pictura pe panza si care
-                    reprezinta o imagine digitala printata de o imprimanta performanta cu jet de cerneala pe panza.</p>
-                <a href="#" class="cta">Download Resume</a>
-            </div>
-        </div>
-    </section>
-    <!-- End About Section -->
-
-    <!-- Contact Section -->
-    <section id="contact">
-        <div class="contact container">
-            <div>
-                <h1 class="section-title">Contact <span>Info</span></h1>
-            </div>
-            <div class="contact-items">
-                <!-- Telefon -->
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/50/phone--v1.png" alt="Telefon" /></div>
-                    <div class="contact-info">
-                        <h1>Telefon</h1>
-                        <h2><a href="tel:0758312756">0758 312 756</a></h2>
-                    </div>
-                </div>
-                <!-- Adresă -->
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/bubbles/50/map-marker.png" alt="Adresă" /></div>
-                    <div class="contact-info">
-                        <h1>Adresă</h1>
-                        <h2><a href="https://www.google.com/maps/search/?api=1&query=Strada+Universităţii+3,+Galați,+Romania"
-                                target="_blank">
-                                Strada Universităţii 3, 800050 Galați
-                            </a></h2>
-                    </div>
-                </div>
-                <!-- Facebook -->
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
-                    </div>
-                    <div class="contact-info">
-                        <h1>Facebook</h1>
-                        <h2><a href="https://www.facebook.com/inspiraplus.ro/" target="_blank">InspirA+</a></h2>
-                    </div>
-                </div>
-                <!-- Instagram -->
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
-                    </div>
-                    <div class="contact-info">
-                        <h1>Instagram</h1>
-                        <h2><a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">@inspiraplus.ro</a></h2>
-                    </div>
-                </div>
-                <!-- TikTok -->
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" /></div>
-                    <div class="contact-info">
-                        <h1>TikTok</h1>
-                        <h2><a href="https://www.tiktok.com/@inspiraplus.ro/" target="_blank">@inspiraplus.ro</a></h2>
-                    </div>
-                </div>
-                <!-- WhatsApp -->
-                <div class="contact-item">
-                    <div class="icon"><img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
-                    </div>
-                    <div class="contact-info">
-                        <h1>WhatsApp</h1>
-                        <h2><a href="https://wa.me/40758312756" target="_blank">0758 312 756</a></h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- End Contact Section -->
 
     <!-- Footer -->
     <section id="footer">
