--- a/termeni.html
+++ b/termeni.html
@@ -58,6 +58,21 @@
             <li>Original commissioned artworks and workshops/courses are secured with an advance payment to confirm the
                 order or reservation.</li>
             <li>Physical prints can be produced on demand after payment confirmation.</li>
+            <li>he sale of an original artwork does not transfer copyright or reproduction rights. All image rights
+                remain the property of the artist. The artist reserves the right to reproduce the artwork in the form of
+                prints, limited editions, or other
+                formats, for artistic or commercial purposes, without the buyer’s further consent</li>
+            <li>Public display of the artwork by the buyer is permitted. Reproduction of the image for promotional
+                purposes directly related to exhibitions (catalogues, press materials, exhibition websites) is allowed
+                with credit to the artist. Any commercial
+                use remains subject to the artist’s prior written consent.</li>
+            <li>rints The purchase of a print grants ownership of the physical object only, not the image itself. All
+                copyright and reproduction rights remain the property of the artist. Prints may not be reproduced,
+                copied, scanned, digitally distributed,
+                or used for commercial purposes. Public display is permitted. Use of the image for promotional materials
+                directly related to exhibitions is allowed with proper credit to the artist. Any other use of the image
+                requires the artist’s prior
+                written consent.</li>
         </ul>
 
         <h2>4. Copyright</h2>
