--- a/index.html
+++ b/index.html
@@ -24,16 +24,14 @@
                     <div class="hamburger" aria-label="Open Menu" role="button" tabindex="0">
                         <div class="bar"></div>
                     </div>
-
                     <ul>
-                        <li><a href="about.html">About me</a></li>
-                        <li><a href="collection.html">Collection</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="workshops.html">Workshops</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="about.html" target="_blank">About me</a></li>
+                        <li><a href="collection.html" target="_blank">Colection</a></li>
+                        <li><a href="courses.html" target="_blank">Courses</a></li>
+                        <li><a href="workshops.html" target="_blank">Workshops</a></li>
+                        <li><a href="contact.html" target="_blank">Contact</a></li>
                     </ul>
                 </div>
-
             </div>
         </div>
     </section>
