--- a/about.html
+++ b/about.html
@@ -4,56 +4,101 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me | InspirA+</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" href="imagini/cropped-fav.png">
+    <title>About – Xenia Botea</title>
+    <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
+    <link rel="stylesheet" href="about-style.css">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;400;500&family=Montserrat:wght@300;400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
-    <!-- HEADER IDENTIC -->
-    <section id="header">
-        <div class="header container">
-            <div class="nav-bar">
-                <div class="brand">
-                    <a href="index.html">
-                        <img src="imagini/logo.svg" alt="InspirArt Logo" class="logo">
-                    </a>
-                </div>
+    <div class="top-bar">
+        <span>Xenia Botea</span>
+        <span>The artist</span>
+    </div>
 
-                <div class="nav-list">
-                    <div class="hamburger">
-                        <div class="bar"></div>
-                    </div>
-                    <ul>
-                        <li><a href="about.html">About me</a></li>
-                        <li><a href="collection.html">Colection</a></li>
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="workshops.html">Workshops</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
+    <section class="about-section">
+        <h1 class="big-title">ABOUT ME</h1>
+
+        <div class="about-main">
+            <img src="imagini/about-main.jpg" class="main-img" alt="Xenia painting">
+
+            <div class="about-text">
+                <p>My practice is rooted in a figurative-geometric language, while remaining open to formal and
+                    conceptual diversification.</p>
+                <p>My works employ layered symbolism, at times explicit and at times subtly encoded, inviting multiple
+                    readings.
+                </p>
+                <p>Each composition is conceived as a vehicle for meaning, extending beyond its purely visual dimension.
+                </p>
             </div>
         </div>
     </section>
 
-    <!-- CONTINUT PAGINA -->
-    <section class="about container" style="padding-top:120px;">
-        <h1 class="section-title">About <span>Me</span></h1>
-        <p>
-            I’m <strong>Xenia Botea</strong>, a visual artist passionate about creating meaningful and emotional
-            artworks.
-        </p>
-    </section>
+    <section class="art-section">
+        <div class="art-left">
+            <h2 class="big-subtitle">THE ART<br>THAT I DO</h2>
+        </div>
 
-    <!-- FOOTER IDENTIC -->
-    <section id="footer">
-        <div class="footer container">
-            <p class="copyright">© 2026 | All rights reserved InspirA+</p>
+        <div class="art-images">
+            <img src="imagini/art-1.jpg" alt="Artwork detail">
+            <img src="imagini/art-2.jpg" alt="Artwork process">
         </div>
     </section>
 
-    <script src="./app.js"></script>
+    <section class="credentials">
+        <h2 class="section-title">MY CREDENTIALS</h2>
+
+        <div class="cred-content">
+            <div class="cred-text">
+                <p>2022–2024 — MA in Visual Arts (Painting), Faculty of Arts, “Dunărea de Jos” University of Galați</p>
+                <p>2014–2017 — BA in Visual Arts (Painting), Faculty of Arts, “Dunărea de Jos” University of Galați</p>
+                <p>2021 — Member UAPR</p>
+                <p>2024–present — Founder, InspirA+ Studio</p>
+            </div>
+
+            <img src="imagini/credentials.jpg" alt="Credentials image">
+        </div>
+    </section>
+
+    <section class="quote-section">
+        <h2>Every piece of art I create holds a piece of me forever.</h2>
+        <img src="imagini/quote-image.jpg" alt="Quote image">
+    </section>
+
+    <section class="recent">
+        <h2 class="section-title">MY MOST RECENT PROJECT</h2>
+
+        <div class="recent-grid">
+            <div>
+                <img src="imagini/project-1.jpg" alt="Project 1">
+                <p><em>“Bland”</em>, mixed-media collage</p>
+            </div>
+
+            <div>
+                <img src="imagini/project-2.jpg" alt="Project 2">
+                <p><em>“Dezlegare”</em>, acrylic on canvas</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="collaborate">
+        <div class="collab-left">
+            <p class="small-top">Xenia Botea</p>
+            <h2>COLLABORATE</h2>
+            <p class="desc">
+                I welcome creative partnerships, commissions, and artistic projects. Feel free to get in touch to
+                explore potential collaborations.
+            </p>
+        </div>
+
+        <div class="collab-right">
+            <img src="imagini/collab.jpg" alt="Collaborate image">
+        </div>
+    </section>
+
 </body>
 
 </html>
