--- a/collection.html
+++ b/collection.html
@@ -2,27 +2,22 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>InspirA+</title>
-    <link rel="icon" type="image/png" href="imagini/cropped-fav.png">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Collection | InspirA+</title>
+    <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
 </head>
 
 <body>
-
-    <!-- HEADER -->
     <section id="header">
         <div class="header container">
             <div class="nav-bar">
                 <div class="brand">
-                    <a href="index.html">
-                        <img src="imagini/logo.svg" alt="InspirArt Logo" class="logo">
-                    </a>
+                    <a href="index.html"><img src="imagini/logo.svg" alt="InspirArt Logo" class="logo" /></a>
                 </div>
-
                 <div class="nav-list">
-                    <div class="hamburger">
+                    <div class="hamburger" aria-label="Open Menu" role="button" tabindex="0">
                         <div class="bar"></div>
                     </div>
                     <ul>
@@ -37,98 +32,66 @@
         </div>
     </section>
 
-    <!-- COLLECTION -->
-    <!-- Service Section -->
-    <section id="services">
-        <div class="services container">
-            <div class="service-top">
-                <h1 class="section-title">Cole<span>c</span>tion</h1>
-                <p class="highlight-text">Hello! Welcome to my world!</p>
-                <p>I’m <strong>Xenia Botea</strong>, a visual artist. Here you will find my original artworks and art
-                    prints. I hope you enjoy your time here, and thank you for your interest in my work.</p>
-                <p class="social-prompt">If you’d like to get in touch, feel free to send me a message on
-                    <span>WhatsApp </span> or follow me on social media.
-                </p>
+    <main class="page">
+        <div class="page-inner">
+            <h1 class="page-title">Art <span>Collection</span></h1>
+            <p class="page-subtitle">Featured works (replace placeholders with your real pieces).</p>
+
+            <div class="grid">
+                <article class="card">
+                    <div class="card-media"></div>
+                    <div class="card-body">
+                        <span class="badge">Mixed Media</span>
+                        <h3>Piece title #1</h3>
+                        <p>Short description, dimensions, availability, etc.</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="card-media"></div>
+                    <div class="card-body">
+                        <span class="badge">Series</span>
+                        <h3>Piece title #2</h3>
+                        <p>Short description, story behind the work.</p>
+                    </div>
+                </article>
+
+                <article class="card">
+                    <div class="card-media"></div>
+                    <div class="card-body">
+                        <span class="badge">Canvas</span>
+                        <h3>Piece title #3</h3>
+                        <p>Short description, medium and year.</p>
+                    </div>
+                </article>
             </div>
         </div>
-        <div class="service-bottom">
-            <!-- Service items (4) -->
-            <div class="service-item">
-                <div class="icon"><img
-                        src="https://img.icons8.com/external-justicon-flat-justicon/100/external-canvas-artist-studio-justicon-flat-justicon.png" />
-                </div>
-                <h2>Web Design</h2>
-                <p>Un tablou canvas este rezultatul unei imagini imprimate pe pânză, care este întinsă pe un cadru
-                    (șasiu) de lemn. Tablourile canvas sunt folosite în designul interior, utilizând imagini stoc, sau
-                    personalizate cu fotografii personale. Tablourile
-                    canvas pot reproduce aspectul unei picturi în ulei sau acrilice.</p>
-            </div>
-            <!-- ... alte 3 service-items la fel ... -->
-        </div>
-        </div>
-    </section>
-    <!-- End Service Section -->
-    <!-- Footer -->
+    </main>
+
     <section id="footer">
         <div class="footer container">
             <div class="brand">
                 <h1><span>X</span>enia <span>B</span>otea</h1>
             </div>
-
-            <!-- Contact -->
-            <!-- Social icons -->
             <div class="social-icons">
-                <a href="https://www.facebook.com/inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook">
-                </a>
-                <a href="https://www.instagram.com/inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
-                </a>
-                <a href="https://www.tiktok.com/@inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
-                </a>
-                <a href="https://wa.me/40758312756" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
-                </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati"
-                    class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps">
-                </a>
-
-
+                <a href="https://www.facebook.com/inspiraplus.ro/" target="_blank" rel="noopener"><img
+                        src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook"></a>
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank" rel="noopener"><img
+                        src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram"></a>
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank" rel="noopener"><img
+                        src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok"></a>
+                <a href="https://wa.me/40758312756" target="_blank" rel="noopener"><img
+                        src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp"></a>
             </div>
-            <p class="copyright">© 2026 | All rights reserved InspirA+</p>
-            <div style="text-align: center; margin-top: 15px;">
-                <a href="termeni.html"
-                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Terms
-                    & Conditions</a>
-                <span style="color: #444;">|</span>
-                <a href="privacy.html"
-                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Privacy
-                    Policy</a>
-            </div>
+            <p>© 2026 | All rights reserved InspirA+</p>
+            <div class="legal"><a href="termeni.html">Terms &amp; Conditions</a><span>|</span><a
+                    href="privacy.html">Privacy Policy</a></div>
         </div>
     </section>
-    <!-- End Footer -->
-    <script>
-        // Blochează click dreapta pe imagini
-        document.addEventListener('contextmenu', function (e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        }, false);
 
-        // Blochează drag and drop (să nu poată trage imaginea pe desktop)
-        document.addEventListener('dragstart', function (e) {
-            if (e.target.tagName === 'IMG') {
-                e.preventDefault();
-            }
-        }, false);
-    </script>
     <script src="./app.js"></script>
-    <!-- Buton WhatsApp fix dreapta jos -->
-    <a href="https://wa.me/40758312756" target="_blank" class="whatsapp-float">
-        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+    <a href="https://wa.me/40758312756" target="_blank" rel="noopener" class="whatsapp-float">
+        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
     </a>
 </body>
 
