--- a/index.html
+++ b/index.html
@@ -2,20 +2,21 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>InspirA+</title>
-    <link rel="icon" type="image/png" href="imagini/cropped-fav.png">
+    <link rel="icon" type="image/png" href="imagini/cropped-fav.png" />
 </head>
 
 <body>
+
     <!-- Header -->
     <section id="header">
         <div class="header container">
             <div class="nav-bar">
                 <div class="brand">
-                    <a href="index.html">
+                    <a href="index.html" aria-label="Home">
                         <img src="imagini/logo.svg" alt="InspirArt Logo" class="logo" />
                     </a>
                 </div>
@@ -25,18 +26,20 @@
                         <div class="bar"></div>
                     </div>
                     <ul>
-                        <li><a href="about.html" target="_blank">About me</a></li>
-                        <li><a href="collection.html" target="_blank">Colection</a></li>
-                        <li><a href="courses.html" target="_blank">Courses</a></li>
-                        <li><a href="workshops.html" target="_blank">Workshops</a></li>
-                        <li><a href="contact.html" target="_blank">Contact</a></li>
+                        <li><a href="about.html">About me</a></li>
+                        <li><a href="collection.html">Collection</a></li>
+                        <li><a href="courses.html">Courses</a></li>
+                        <li><a href="workshops.html">Workshops</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
+
             </div>
         </div>
     </section>
     <!-- End Header -->
 
+    <!-- Hero -->
     <section id="hero" class="hero-clean">
         <div class="hero container hero-v2">
             <div class="hero-top">
@@ -81,6 +84,7 @@
             </div>
         </div>
     </section>
+
     <!-- Newsletter Popup -->
     <div id="newsletter-popup">
         <div class="popup-content">
@@ -88,34 +92,26 @@
             <h2>Subscribe to the newsletter</h2>
             <p>Stay up to date with the latest news and events from InspirArt!</p>
             <form id="newsletter-form">
-                <input type="email" placeholder="Enter your email address" required>
+                <input type="email" placeholder="Enter your email address" required />
                 <button type="submit">Subscribe</button>
             </form>
 
-            <!-- Social icons -->
             <div class="social-icons">
-                <a href="https://www.facebook.com/inspiraplus.ro" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook">
+                <a href="https://www.facebook.com/inspiraplus.ro" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
                 </a>
-                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
                 </a>
-                <a href="mailto:Contact@inspiraplus.ro" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/email.png" alt="Email">
+                <a href="mailto:Contact@inspiraplus.ro">
+                    <img src="https://img.icons8.com/fluency/48/email.png" alt="Email" />
                 </a>
-
-                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank">
-                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" />
                 </a>
             </div>
         </div>
     </div>
-
-
-
-
-
-
 
     <!-- Footer -->
     <section id="footer">
@@ -124,46 +120,56 @@
                 <h1><span>X</span>enia <span>B</span>otea</h1>
             </div>
 
-            <!-- Contact -->
-            <!-- Social icons -->
             <div class="social-icons">
-                <a href="https://www.facebook.com/inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook">
+                <a href="https://www.facebook.com/inspiraplus.ro/" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/facebook-new.png" alt="Facebook" />
                 </a>
-                <a href="https://www.instagram.com/inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram">
+                <a href="https://www.instagram.com/inspiraplus.ro/" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/instagram-new.png" alt="Instagram" />
                 </a>
-                <a href="https://www.tiktok.com/@inspiraplus.ro/" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok">
+                <a href="https://www.tiktok.com/@inspiraplus.ro" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/color/48/tiktok--v1.png" alt="TikTok" />
                 </a>
-                <a href="https://wa.me/40758312756" class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+                <a href="https://wa.me/40758312756" target="_blank" rel="noopener">
+                    <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
                 </a>
-                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati"
-                    class="social-item" target="_blank">
-                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps">
+                <a href="https://www.google.com/maps/search/?api=1&query=Strada+Universitatii+3+Galati" target="_blank"
+                    rel="noopener">
+                    <img src="https://img.icons8.com/fluency/48/000000/google-maps-new.png" alt="Google Maps" />
                 </a>
-
-
             </div>
+
+            <div class="footer-welcome">
+                <h3 class="footer-title">WELCOME!</h3>
+
+                <p class="footer-text">
+                    Hi! Welcome to my world! I’m artist Xenia Botea.
+                </p>
+
+                <p class="footer-text">
+                    Here you will find my original artworks, fine art prints and workshops. My art comes to life in many
+                    different ways. I hope you’ll enjoy your time here, and thank you for collecting.
+                </p>
+
+                <p class="footer-text">
+                    If you’d like to connect with me, feel free to drop me an email or follow me on social media. I’d
+                    love to hear from you!
+                </p>
+            </div>
+
             <p class="copyright">© 2026 | All rights reserved InspirA+</p>
-            <div style="text-align: center; margin-top: 15px;">
-                <a href="termeni.html"
-                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Terms
-                    & Conditions</a>
-                <span style="color: #444;">|</span>
-                <a href="privacy.html"
-                    style="color: #eb00ff; text-decoration: none; font-size: 12px; margin: 0 10px; text-transform: uppercase;">Privacy
-                    Policy</a>
+            <div class="legal">
+                <a href="termeni.html">Terms &amp; Conditions</a>
+                <span>|</span>
+                <a href="privacy.html">Privacy Policy</a>
             </div>
         </div>
     </section>
-    <!-- End Footer -->
 
     <script src="./app.js"></script>
-    <!-- Buton WhatsApp fix dreapta jos -->
-    <a href="https://wa.me/40758312756" target="_blank" class="whatsapp-float">
-        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp">
+
+    <a href="https://wa.me/40758312756" target="_blank" rel="noopener" class="whatsapp-float">
+        <img src="https://img.icons8.com/color/48/whatsapp--v1.png" alt="WhatsApp" />
     </a>
 
 </body>
